--- a/Css/style.css
+++ b/Css/style.css
@@ -14,3 +14,12 @@ div.h1 {
   background-color: green;
   text-transform: uppercase;
 }
+.aofix{
+  width:300px;
+  height:400px;
+  border-style:solid;
+}
+.ao7 {
+  width: 300px;
+  height: 200px;
+  border-style: solid;
